--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "caniuse-lite": "^1.0.30001589",
     "carousel": "^0.0.3",
     "next": "^14.2.13",
+    "nodemailer": "^7.0.12",
     "photoswipe": "^5.4.3",
     "react": "^18",
     "react-circular-progressbar": "^2.1.0",
